       the status of a file or folder could
       not be read. (Stefan)
- BUG: The status strings weren't localized
       in the commit and "Check for Updates"
       dialog. (Stefan)
- BUG: Menu settings could be ignored if 
       the first settings change is to put
       all menu entries in the submenu. If
       any other setting was made first then
       everything was ok. (Stefan)

Version 0.21
- ADD: If multiple targets are selected for
       update the all targets which belong to
       the same repository (have the same uuid)
       are updated to the same revision, no matter
       if another commit happened in between
       those updates. (Stefan)
- ADD: Subversion got a new command: "Blame".
       TSVN has it too :) What it does?
       It shows you for each line in a file
       the revision it was last changed and
       the author (so you can blame a bug
       on that author :). (Stefan)
- ADD: The show log command now only shows
       the last 100 revisions, configurable
       in the settings dialog. A new "Get All"
       button then fetches the rest of the log
       messages if needed. (Stefan)
- CHG: Rewrite of the status cache. The time
       for sorting a by a column should now
       take much less time and scale much
       better than before. (Stefan)
- CHG: Don't error out when doing a merge 
       if the wc has been changed. (Stefan)
- BUG: Empty lines were not shown in log
       messages. (Stefan)
- BUG: Temp files weren't deleted before an
       import even if they were marked for
       deletion. (Stefan)
- BUG: The log message when creating a new
       folder was always the same. (Stefan)
- BUG: Changes made on folders in the repo-
       browser weren't shown (refresh did
       not work). (Stefan)
- BUG: "An invalid argument was encountered"
       in the log-dialog when working only
       with keyboard got fixed. (Stefan)

Version 0.20.2
- BUG: crash bug not fixed in 0.20.1 (one Ctrl-Z